# spotme

./: .gitignore  Agent.md  docker-compose.yml
back/: Cargo.toml  Dockerfile
back/src/: db.rs  handlers.rs  main.rs  models.rs  state.rs
front/: .metadata  Dockerfile  README.md  build_apk.sh  init.gradle  pubspec.yaml
front/android/: settings.gradle
front/android/app/: build.gradle
front/android/app/src/main/: AndroidManifest.xml
front/android/app/src/main/kotlin/com/spotme/spotme/: MainActivity.kt
front/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
front/android/app/src/main/res/values/: colors.xml
front/lib/: main.dart
front/lib/core/: config.dart  theme.dart
front/lib/features/auth/: telegram_login_screen.dart
front/lib/features/location/: location_service.dart
front/lib/features/map/: map_screen.dart
front/test/: widget_test.dart
web/: .dockerignore  Dockerfile  package-lock.json
web/src/app/: layout.js  page.js
web/src/app/api/download/: route.js
web/src/app/api/health/: route.js
web/src/app/api/upload/: route.js
web/src/app/auth/telegram/: page.js
web/src/app/auth/telegram-callback/: page.js
web/src/app/components/: ServerStatus.js
web/src/app/upload/: page.js
